# tdd-by-example

./: CMakeLists.txt  main.cpp
ext/gtest/: CMakeLists.txt
include/: Figura2D.h  Punto2D.h  Recta2D.h
src/: Figura2D.cpp  Punto2D.cpp  Recta2D.cpp
test/: Figura2DTest.cpp  TestPunto2D.cpp  TestRecta2D.cpp
